[package]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
edition = "2018"

[lib]
name = "{{ cookiecutter.project_slug }}"
crate-type = ["cdylib"]

[dependencies]
log = "*"
log4rs = "1.0.0"
fs_extra = "*"
tera = "1.3.0"
serde = "1.0.106"
serde_yaml = "0.8.11"
serde_derive = "1.0.106"
anyhow = "1.0.31"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[build-dependencies]
fs_extra = "*"
